--- a/Pong/pong.kv
+++ b/Pong/pong.kv
@@ -1,5 +1,8 @@
 #!Kivy 1.7.2 
+
 <PongGame>:
+	ball: pong_ball
+
 	canvas:
 		Rectangle:
 			pos: self.center_x - 5, 0
@@ -16,6 +19,7 @@
 		top: root.top - 50
 		text: "0"
 	PongBall:
+		id: pong_ball
 		center: self.parent.center
 
 <PongBall>:
