--- a/Pong/pong.kv
+++ b/Pong/pong.kv
@@ -2,6 +2,8 @@
 
 <PongGame>:
 	ball: pong_ball
+	palyer1: player_left
+	player2: player_right
 
 	canvas:
 		Rectangle:
@@ -21,10 +23,26 @@
 	PongBall:
 		id: pong_ball
 		center: self.parent.center
+	PongPaddle:
+		id: player_left
+		x: root.x
+		center_y: root.center_y
+	
+	PongPaddle:
+		id: player_right
+		x: root.width - self.width
+		center_y: root.center_y
 
 <PongBall>:
 	size: 50, 50
 	canvas:
 		Ellipse:
+			pos: self.pos
+			size: self.size
+
+<PongPaddle>:
+	size: 25, 200
+	canvas:
+		Rectangle:
 			pos: self.pos
 			size: self.size
